Fix UUID PR compile and style issues